--- a/apk/pubspec.yaml
+++ b/apk/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/LICENSE
     - assets/README.md
     - assets/logo/
+    - assets/wasm_test.wasm
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
