--- a/fdroid/org.fm_elpac.a_pinyin.ui.yml
+++ b/fdroid/org.fm_elpac.a_pinyin.ui.yml
@@ -33,7 +33,7 @@ Builds:
       - $$rustup$$/rustup-init.sh -y
       - source $HOME/.cargo/env
       - rustup default stable
-      - rustup target add wasm32-wasi
+      - rustup target add wasm32-unknown-unknown
       # setup flutter toolchain
       - cd ../../ && $$flutter$$/bin/flutter config --no-analytics
 
