--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # 大约用时 5 分钟
-    timeout-minutes: 25
+    # 大约用时 10 分钟
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
 
@@ -25,6 +25,18 @@ jobs:
       # 安装 ktlint
       - run: curl -sSLO ${{ env.URL_KTLINT }} && chmod a+x ktlint
       - run: ./ktlint --version
+
+      # cache cargo
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cargo
+          key: ${{ runner.os }}-cargo
+      # cache: flutter pub run wasm:setup
+      - uses: actions/cache@v2
+        with:
+          path: apk/.dart_tool/wasm
+          key: ${{ runner.os }}-wasm_setup
+
       # rust 编译工具
       - uses: actions-rs/toolchain@v1
         with:
@@ -68,3 +80,11 @@ jobs:
           if-no-files-found: error
           name: ${{ env.APK_ARM32 }}
           path: apk/build/app/outputs/flutter-apk/app-armeabi-v7a-release-signed.apk
+
+      # flutter pub run wasm:setup
+      - uses: actions/upload-artifact@v2
+        with:
+          if-no-files-found: error
+          name: dart_tool-wasm-libwasmer.so
+          path: apk/.dart_tool/wasm/libwasmer.so
+
