--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push]
 
 env:
   APK_ARM64: a_pinyin-2.0.0-a2-arm64-v8a-release.apk
-  APK_ARM32: a_pinyin-2.0.0-a2-armeabi-v7a-release.apk
+  #APK_ARM32: a_pinyin-2.0.0-a2-armeabi-v7a-release.apk
 
   URL_KTLINT: https://github.com/pinterest/ktlint/releases/download/0.43.2/ktlint
 
@@ -80,11 +80,11 @@ jobs:
           if-no-files-found: error
           name: ${{ env.APK_ARM64 }}
           path: apk/build/app/outputs/flutter-apk/app-arm64-v8a-release-signed.apk
-      - uses: actions/upload-artifact@v2
-        with:
-          if-no-files-found: error
-          name: ${{ env.APK_ARM32 }}
-          path: apk/build/app/outputs/flutter-apk/app-armeabi-v7a-release-signed.apk
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     if-no-files-found: error
+      #     name: ${{ env.APK_ARM32 }}
+      #     path: apk/build/app/outputs/flutter-apk/app-armeabi-v7a-release-signed.apk
 
       # flutter pub run wasm:setup
       - uses: actions/upload-artifact@v2
