--- a/apk/android/app/build.gradle
+++ b/apk/android/app/build.gradle
@@ -54,7 +54,7 @@ android {
 
         // 注意: 不能使用 ndk.abiFilters 会冲突编译失败 !
         // ndk {
-        //     abiFilters 'armeabi-v7a', 'arm64-v8a'
+        //     abiFilters 'arm64-v8a', 'armeabi-v7a'
         // }
     }
 
@@ -63,7 +63,8 @@ android {
         abi {
             enable true
             reset()
-            include 'armeabi-v7a', 'arm64-v8a'
+            //include 'arm64-v8a', 'armeabi-v7a'
+            include 'arm64-v8a'
 
             // 注意: universalApk 必须为 true, 若为 false 则 flutter run 失败 !
             universalApk true
