--- a/apk/pubspec.yaml
+++ b/apk/pubspec.yaml
@@ -74,7 +74,8 @@ flutter:
     - assets/LICENSE
     - assets/README.md
     - assets/logo/
-    - assets/wasm_test.wasm
+    - assets/wasm/
+    - assets/sql/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
