--- a/apk/pubspec.yaml
+++ b/apk/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   fast_immutable_collections: ^7.2.0
   json_annotation: ^4.4.0
   event_bus: ^2.0.0
+  channel: ^2.0.0
   shared_preferences: ^2.0.13
   path_provider: ^2.0.9
   flutter_local_notifications: ^9.3.1
