--- a/apk/android/app/src/main/AndroidManifest.xml
+++ b/apk/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
   <application android:label="@string/app_name" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
     <activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
@@ -25,6 +26,9 @@
       <!-- 必须有此元数据, 输入法才能在系统设置中出现 -->
       <meta-data android:name="android.view.im" android:resource="@xml/method" />
     </service>
+
+    <!-- flutter_local_notifications -->
+    <service android:name="com.dexterous.flutterlocalnotifications.ForegroundService" android:exported="false" />
 
     <!-- Don't delete the meta-data below.
          This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
